# riscv-evm-experiment

./: Cargo.toml  README.md  RESULT-draft.md  RESULT-final.md 
bins/e2e-tests/: Cargo.toml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: erc20_evm.rs  erc20_riscv_evm.rs
crates/benchmarks/src/: lib.rs
crates/handler/src/: api.rs  execution.rs  handler.rs  lib.rs  main_builder.rs  post_execution.rs  pre_execution.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/research-draft/counter_riscvim32_smart_contract_asm/: Cargo.toml
crates/research-draft/counter_riscvim32_smart_contract_asm/src/: contract.rs  main.rs
crates/research-draft/handler/: Cargo.toml
crates/research-draft/handler/src/: handler.rs
crates/research-draft/riscv_evm/: Cargo.toml
crates/research-draft/riscv_evm/src/: context.rs  ecall_manager.rs  elf_parser.rs  instructions.rs  lib.rs  test.rs  utils.rs  vm.rs
crates/research-draft/riscv_evm_core/: Cargo.toml
crates/research-draft/riscv_evm_core/src/: e_constants.rs  interfaces.rs  lib.rs
crates/research-final/benchmarks/benches/: erc20_riscv_evm.rs
crates/riscv_smart_contracts/: counter.s  erc20.s  erc20.sol
