[workspace]
members = [ "bins/e2e-tests", "crates/research-draft/riscv_evm", "crates/research-draft/riscv_evm_core","crates/research-final/benchmarks", "crates/research-final/handler", "crates/research-final/primitives"]



[workspace.dependencies]
# revm
revm = { version = "21.0.0", default-features = false }
revm-bytecode = { version = "2.0.0", default-features = false }
revm-database = { version = "2.0.0", default-features = false }
revm-state = { version = "2.0.0", default-features = false }
revm-primitives = { version = "17.0.0", default-features = false }
revm-interpreter = { version = "17.0.0", default-features = false }
revm-inspector = { version = "2.0.0", default-features = false }
revm-context = { version = "2.0.0", default-features = false }
revm-context-interface = { version = "2.0.0", default-features = false }
revm-database-interface = { version = "2.0.0", default-features = false }
op-revm = { version = "2.0.0", default-features = false }
revm-inspectors = "0.18.0"


#anyhow 
anyhow = "1.0.97"

#alloy
alloy-sol-types = { version = "0.8.2", default-features = false }

#workspace crates
primitives = { path = "crates/research-final/primitives"}
handler = { path = "crates/research-final/handler"}
riscv_evm_core = { path = "crates/research-draft/riscv_evm_core"}

#misc 
auto_impl = "1.2.0"
hashbrown = "0.14.5"